--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Forecast</title>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="container">
+      <header>
+        <form id="city">
+          <input type="text" name="city" placeholder="Find your city..." class="city-input" />
+          <button type="submit" class="find-city-btn">Find!</button>
+          <button type="submit" class="current-location-btn">Current location</button>
+          <div class="time"></div>
+        </form>
+      </header>
+
+      <main class="text-center">
+        <div class="current-weather">
+          <h2>
+            <span class="celsius">25</span>
+            °C
+          </h2>
+          <h1>Paris</h1>
+          <div class="icon"></div>
+          <p class="description"></p>
+          <p class="humidity">Humidity: <span>55</span>%</p>
+          <p class="wind">Wind: <span>9</span>m/s</p>
+        </div>
+      </main>
+
+      <footer>
+        <a href="https://weather.com" class="more-info">More info...</a>
+      </footer>
+    </div>
+
+    <script src="https://kit.fontawesome.com/fcd9b50605.js" crossorigin="anonymous"></script>
+    <script src="./apiscript.js"></script>
   </body>
 </html>
