--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             °C
           </h2>
           <h1>Paris</h1>
-          <div class="icon"></div>
-          <p class="description"></p>
+          <div class="icon"><i class="fa-solid fa-sun"></i></div>
+          <p class="description">-</p>
           <p class="humidity">Humidity: <span>55</span>%</p>
           <p class="wind">Wind: <span>9</span>m/s</p>
         </div>
