Changed axios version to 0.27.2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios@0.27.2/dist/axios.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -33,14 +33,14 @@
       <main class="text-center">
         <div class="current-weather">
           <h2>
-            <span class="celsius">25</span>
+            <span class="celsius">17</span>
             °C
           </h2>
           <h1>Paris</h1>
           <div class="icon"><i class="fa-solid fa-sun"></i></div>
           <p class="description">-</p>
-          <p class="humidity">Humidity: <span>55</span>%</p>
-          <p class="wind">Wind: <span>9</span>m/s</p>
+          <p class="humidity">Humidity: <span>67</span>%</p>
+          <p class="wind">Wind: <span>2</span>m/s</p>
         </div>
       </main>
 
