Added git-link in the footer

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 
       <footer>
         <a href="https://weather.com" class="more-info">More info...</a>
+        <p class="git-link">
+          <a href="https://github.com/InvincibleSun/Weather-app" target="_blank" rel="noreferrer"
+            >Open-source code</a
+          >, by Yulia Vitiunina
+        </p>
       </footer>
     </div>
 
