--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="current-weather">
           <h2>
             <span class="temp">25</span>
-            <a href="#" class="sign-C active">°C  | </a> 
+            <a href="#" class="sign-C active">°C </a>  |
             <a href="#">°F</a>
           </h2> 
           <h1>Paris</h1>
