Add HTML/CSS structure

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <header>
         <form id="city">
-          <input type="text" name="city" placeholder="Find your city..." class="city-input" autocomplete="off"/>
+          <input type="text" name="city" placeholder="Find your city..." class="city-input" autocomplete="on"/>
           <button type="submit" class="find-city-btn">Find!</button>
           <button type="submit" class="current-location-btn">Current location</button>
           <div class="time"></div>
@@ -32,10 +32,49 @@
             <a href="#">°F</a>
           </h2> 
           <h1>Paris</h1>
-          <img src="" alt="" class="icon"></img>
+          <img src="https://ssl.gstatic.com/onebox/weather/48/cloudy.png" alt="weather-icon" class="icon" width="100" height="100"></img>
           <p class="description">Description</p>
           <p class="humidity">Humidity: <b>67</b></p>
           <p class="wind">Wind: <b>2</b></p>
+        </div>
+
+        <div class="forecast-row">
+          <div class="forecast-item">
+            <div class="forecast-elem">
+              <p class="forecast-day">Mon</p>
+              <img src="https://ssl.gstatic.com/onebox/weather/48/cloudy.png" alt="icon">
+              <div class="forecast-temp"> <span class="forecast-temp-max">17°</span> <span class="forecast-temp-min">12°</span></div>
+            </div>
+          </div>
+          <div class="forecast-item">
+            <div class="forecast-elem">
+              <p class="forecast-day">Mon</p>
+              <img src="https://ssl.gstatic.com/onebox/weather/48/cloudy.png" alt="icon">
+              <div class="forecast-temp"> <span class="forecast-temp-max">17°</span> <span class="forecast-temp-min">12°</span></div>
+            </div>
+          </div>
+          <div class="forecast-item">
+            <div class="forecast-elem">
+              <p class="forecast-day">Mon</p>
+              <img src="https://ssl.gstatic.com/onebox/weather/48/cloudy.png" alt="icon">
+              <div class="forecast-temp"> <span class="forecast-temp-max">17°</span> <span class="forecast-temp-min">12°</span></div>
+            </div>
+          </div>
+          <div class="forecast-item">
+            <div class="forecast-elem">
+              <p class="forecast-day">Mon</p>
+              <img src="https://ssl.gstatic.com/onebox/weather/48/cloudy.png" alt="icon">
+              <div class="forecast-temp"> <span class="forecast-temp-max">17°</span> <span class="forecast-temp-min">12°</span></div>
+            </div>
+          </div>
+          <div class="forecast-item">
+            <div class="forecast-elem">
+              <p class="forecast-day">Mon</p>
+              <img src="https://ssl.gstatic.com/onebox/weather/48/cloudy.png" alt="icon">
+              <div class="forecast-temp"> <span class="forecast-temp-max">17°</span> <span class="forecast-temp-min">12°</span></div>
+            </div>
+          </div>
+          
         </div>
       </main>
 
