Removed the fahrenheit temp conversion

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
       <main>
         <section class="current-weather">
           <h2>
-            <span class="temp">25</span>
-            <a href="#" class="sign-C active">°C </a>  |
-            <a href="#">°F</a>
+            <span class="temp">25</span>°C 
           </h2> 
           <h1>Paris</h1>
           <img src="https://ssl.gstatic.com/onebox/weather/48/cloudy.png" alt="weather-icon" class="icon" width="100" height="100"></img>
